fixed theme import, updated 404 page & fixed clippath to clipPath to fix render issues

--- a/src/components/rainbow-text.module.css
+++ b/src/components/rainbow-text.module.css
@@ -1,18 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
-/* @font-face {
-  font-family: "MontserratBlack";
-  src: url(/assets/fonts/Montserrat-Black.ttf) format("truetype"),
-    url(/assets/fonts/Montserrat-Black.woff2) format("woff2"); 
-} */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;900&display=swap');
 
 .canvas {
   width: 400px;
   height: 80px;
-}
-
-
-#svgTextPath  {
- /* Used as classname for svg text path */
- /* Refrence of this class in clip path */
- /* Styles wont work here because the id is concatenated with text */
 }
